<resources>
    <string name="app_name">MoodyBuds</string>
    <string name="preview_text_about_their_day">Preview text about their day</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="something_you_are_grateful_for">Something you are grateful for...</string>
    <string name="todo">TODO</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="update">update</string>
    <string name="something_negative">Something negative...</string>
    <string name="todo">TODO</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="something_positive">Something positive...</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="name">Name</string>
    <string name="group_name">Group Name</string>
    <string name="readtext">ReadText</string>
    <string name="readtext">ReadText</string>
    <string name="readtext">ReadText</string>
</resources>