<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPage">

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textbox2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="161dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#A2E3EC"
        android:text="@string/update" />

    <ImageView
        android:id="@+id/profile2"
        android:layout_width="68dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="137dp"
        android:contentDescription="@string/todo"
        tools:srcCompat="@tools:sample/avatars" />

    <SeekBar
        android:id="@+id/moodBar2"
        android:layout_width="242dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="39dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="180dp" />

    <TextView
        android:id="@+id/prompt2"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/groupName"
        android:layout_below="@+id/textbox"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/something_you_are_grateful_for" />

    <TextView
        android:id="@+id/prompt"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/groupName"
        android:layout_below="@+id/textbox3"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/something_negative" />

    <TextView
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="29dp"
        android:background="#FFFFFF"
        android:backgroundTint="#B0EDF4"
        android:text="@string/group_name"
        android:textAlignment="center"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/Prompt1"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/groupName"
        android:layout_below="@+id/moodBar2"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="51dp"
        android:text="@string/something_positive" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textbox2"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/groupName"
        android:layout_below="@+id/prompt2"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="-69dp"
        android:layout_marginTop="2dp"
        android:hint="@string/enter_text_here" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textbox"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/groupName"
        android:layout_below="@+id/prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="-69dp"
        android:layout_marginTop="2dp"
        android:hint="@string/enter_text_here" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textbox3"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/groupName"
        android:layout_below="@+id/Prompt1"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="-70dp"
        android:layout_marginTop="2dp"
        android:hint="@string/enter_text_here" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/groupName"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:hint="@string/name" />

</RelativeLayout>