<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailPageActivity">

    <TextView
        android:id="@+id/prompt2"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNeg"
        android:layout_alignStart="@+id/Prompt1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:text="@string/something_you_are_grateful_for"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/prompt3"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userPos"
        android:layout_alignStart="@+id/Prompt1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:text="@string/something_negative"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/prompt"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/groupName"
        android:layout_alignBottom="@+id/userPos"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="392dp"
        android:text="@string/something_negative" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#AFEBF3"
        android:contentDescription="@string/todo"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/Prompt1"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userProfilePic"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:text="@string/something_positive"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/userGrateful"
        android:layout_width="344dp"
        android:layout_height="85dp"
        android:layout_below="@+id/prompt2"
        android:layout_alignStart="@+id/userProfilePic"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="33dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/readtext"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/userNeg"
        android:layout_width="344dp"
        android:layout_height="85dp"
        android:layout_below="@+id/prompt3"
        android:layout_alignStart="@+id/userProfilePic"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="33dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/readtext"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/userPos"
        android:layout_width="344dp"
        android:layout_height="85dp"
        android:layout_below="@+id/Prompt1"
        android:layout_alignStart="@+id/userProfilePic"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="33dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/readtext"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/backButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <SeekBar
        android:id="@+id/userMoodBar"
        android:layout_width="210dp"
        android:layout_height="31dp"
        android:layout_alignBottom="@+id/userProfilePic"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="34dp"
        android:layout_toEndOf="@+id/userProfilePic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/userProfilePic"
        android:layout_marginStart="109dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/userProfilePic"
        android:text="Mood Bar"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <ImageView
        android:id="@+id/userProfilePic"
        android:layout_width="90dp"
        android:layout_height="95dp"
        android:layout_below="@+id/userName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_user"
        tools:srcCompat="@tools:sample/avatars" />

</RelativeLayout>